src/parse/snapshots/boolua__parse__tests__parse_and_verify_numbers.snap
---
source: src/parse/tests.rs
assertion_line: 19
expression: ast

---
Block {
    stmts: [
        Assignment(
            [
                Simple(
                    Name(
                        "a",
                    ),
                ),
            ],
            [
                Binary(
                    Num(
                        Int(
                            5,
                        ),
                    ),
                    Add,
                    Num(
                        Int(
                            10,
                        ),
                    ),
                ),
            ],
        ),
        Assignment(
            [
                Simple(
                    Name(
                        "b",
                    ),
                ),
            ],
            [
                Binary(
                    Num(
                        Int(
                            4,
                        ),
                    ),
                    Exp,
                    Binary(
                        Num(
                            Int(
                                7,
                            ),
                        ),
                        Exp,
                        Num(
                            Int(
                                2,
                            ),
                        ),
                    ),
                ),
            ],
        ),
    ],
    ret: None,
}
